--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,10 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           version: 12
-      - name: GitHub Action for Yarn Pkg
-        uses: funkyremi/yarn-github-action@2.1.0
+      - name: action-yarn
+        # You may pin to the exact commit or the version.
+        # uses: comchangs/action-yarn@e4a1f4800849aa2e73dbc77d872a3c011cdc28d5
+        uses: comchangs/action-yarn@v0.1-beta
         with:
           #Yarn Command
           cmd: install  #npm install /  yarn intsall
