--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: action-yarn
         # You may pin to the exact commit or the version.
         # uses: comchangs/action-yarn@e4a1f4800849aa2e73dbc77d872a3c011cdc28d5
-        uses: comchangs/action-yarn@1.22.5
+        uses: sergioramos/yarn-actions@v6
         with:
           #Yarn Command
           cmd: install  #npm install /  yarn intsall
