--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,10 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           version: 12
+
       - name: GitHub Action for Yarn Pkg
-        uses: funkyremi/yarn-github-action@1.22.5
+        uses: funkyremi/sergioramos/yarn-actions@v6
+
         with:
           #Yarn Command
           cmd: install  #npm install /  yarn intsall
